Fixed the h2 not centered

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h2 {
     font-size: 36px;
     padding-bottom: 0;
     margin-bottom: 0;
+    text-align: center;
 }
 
 #game > h3 {
